--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "entity-baker",
-  "version": "0.8.1",
+  "version": "0.9.0",
   "description": "Generates simple and powerful entity classes for ORM systems, like Doctrine and/or Entity Framework.",
   "main": "index.js",
   "scripts": {
@@ -37,13 +37,15 @@
     "@types/fs-extra": "^5.0.0",
     "@types/glob": "^5.0.34",
     "@types/minimist": "^1.2.0",
-    "@types/node": "^9.3.0"
+    "@types/node": "^9.3.0",
+    "@types/yamljs": "^0.2.30"
   },
   "dependencies": {
     "fs-extra": "^5.0.0",
     "glob": "^7.1.2",
     "merge-deep": "^3.0.0",
     "minimist": "^1.2.0",
-    "node-enumerable": "^3.9.0"
+    "node-enumerable": "^3.9.0",
+    "yamljs": "^0.3.0"
   }
 }
