--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "entity-baker",
-  "version": "0.10.0",
+  "version": "0.11.0",
   "description": "Generates simple and powerful entity classes for ORM systems, like Doctrine and/or Entity Framework.",
   "main": "index.js",
   "scripts": {
@@ -38,6 +38,7 @@
     "@types/glob": "^5.0.34",
     "@types/minimist": "^1.2.0",
     "@types/node": "^9.3.0",
+    "@types/xml2js": "^0.4.2",
     "@types/yamljs": "^0.2.30"
   },
   "dependencies": {
@@ -46,6 +47,7 @@
     "merge-deep": "^3.0.0",
     "minimist": "^1.2.0",
     "node-enumerable": "^3.9.0",
+    "xml2js": "^0.4.19",
     "yamljs": "^0.3.0"
   }
 }
