--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "0.14.1",
   "description": "Generates simple and powerful entity classes for ORM systems, like Doctrine and/or Entity Framework.",
   "main": "index.js",
+  "bin": {
+    "entity-baker": "index.js"
+  },
   "scripts": {
+    "entity-baker": "index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
